<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hjq.bar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:leftHorizontalPadding="16dp"
        app:leftIcon="@mipmap/common_icon_back_purple"
        app:lineVisible="false"
        app:rightHorizontalPadding="16dp"
        app:rightTitle="@string/mine_save"
        app:rightTitleColor="@color/color_FFFD62"
        app:rightTitleSize="14sp"
        app:barStyle="transparent"
        app:titleIcon="@mipmap/mine_edit_sign_title_bg"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/mine_edit_sign_tips1"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mine_edit_sign_tips2"
        android:textColor="@color/white50"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <com.kissspace.common.widget.LimitNumEditText
        android:id="@+id/edit_sign"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        app:hintText="@string/mine_edit_sign_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/color_CCC7CC"
        android:textSize="15sp"
        app:limitBackground="@color/color_1A000000"
        app:layout_constraintTop_toBottomOf="@id/tv_sub_title"
        app:maxWordsNum="50" />

</androidx.constraintlayout.widget.ConstraintLayout>