<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@mipmap/mine_bg_store_top"
        app:layout_constraintTop_toTopOf="parent" />

    <com.hjq.bar.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:barStyle="transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:leftHorizontalPadding="16dp"
        app:leftIcon="@mipmap/common_icon_back_white"
        app:lineVisible="false"
        app:rightTitle="我的装扮"
        app:rightTitleColor="@color/color_FFFD62"
        app:title="装扮商城" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_balance"
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@mipmap/mine_bg_store_coin"
        app:layout_constraintTop_toBottomOf="@id/title_bar">



        <TextView
            android:id="@+id/tv_balance_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/dinbold"
            android:textColor="@color/color_FFFD62"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_coin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mine_store_coin"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tv_balance_coin"
            app:layout_constraintTop_toBottomOf="@id/tv_balance_coin" />


        <TextView
            android:id="@+id/tv_recharge"
            android:layout_width="62dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:background="@mipmap/mine_icon_store_buy"
            android:gravity="center"
            android:text="@string/mine_recharge"
            android:textColor="@color/color_FFFD62"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_coin_title"
            app:layout_constraintStart_toEndOf="@id/tv_coin_title"
            app:layout_constraintTop_toTopOf="@id/tv_coin_title" />


        <View
            android:layout_width="0.5dp"
            android:layout_height="75dp"
            android:background="#CCE5E5E5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_balance_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/dinbold"
            android:textColor="@color/color_FFFD62"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_points_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mine_store_points"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tv_balance_points"
            app:layout_constraintTop_toBottomOf="@id/tv_balance_points" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.angcyo.tablayout.DslTabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/layout_balance"
        app:tab_deselect_color="@color/color_949499"
        app:tab_enable_text_bold="true"
        app:tab_item_is_equ_width="true"
        app:tab_select_color="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mine_store_car"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mine_store_avatar"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/mine_store_background"
            android:textSize="16sp" />
    </com.angcyo.tablayout.DslTabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>